--- a/html/src/App.css
+++ b/html/src/App.css
@@ -129,3 +129,18 @@ body {
 	background-color: #eda60c;
 	color: #f9f9f9;
 }
+
+.file {
+  display: flex;
+  align-items: center;
+}
+
+.file img {
+  width: 5vw;
+  height: 5vw;
+  margin-right: 1vw;
+  padding: 1vw;
+  // background-color: #CCC;
+  box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
+  image-rendering: pixelated;
+}
