--- a/html/src/App.css
+++ b/html/src/App.css
@@ -6,6 +6,11 @@ body {
   overflow-y: scroll;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 .tab {
   font-size: 3vw;
 }
@@ -133,6 +138,7 @@ body {
 
 .file {
   display: flex;
+  font-size: 2.5vw;
   align-items: center;
 }
 
@@ -141,7 +147,7 @@ body {
   height: 5vw;
   margin-right: 1vw;
   padding: 1vw;
-  // background-color: #CCC;
-  box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
+  background-color: #FFF;
+  // box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
   image-rendering: pixelated;
 }
